--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -1,17 +1,19 @@
 <Auk::Modal>
-  <Auk::Modal::Header
-    @title={{t "edit-case"}}
-    @onClose={{this.close}}
-  />
-  <Auk::Modal::Body >
-    <div class="auk-form-group ">
+  <Auk::Modal::Header @title={{t "edit-case"}} @onClose={{this.close}} />
+  <Auk::Modal::Body>
+    <div class="auk-form-group">
       <Auk::Label>{{t "short-title-case"}}</Auk::Label>
-      <Auk::Textarea data-test-edit-case-shorttitle @rows="2" @value={{mut this.shortTitle}} />
+      <Auk::Textarea
+        data-test-edit-case-shorttitle
+        @rows="2"
+        @value={{mut this.shortTitle}}
+      />
     </div>
   </Auk::Modal::Body>
   <Auk::Modal::Footer
     @cancelDisabled={{this.save.isRunning}}
-    @onCancel={{this.close}}>
+    @onCancel={{this.close}}
+  >
     <AuButton
       data-test-edit-case-save
       @skin="primary"
