chore: rename stuff

--- a/app/components/mandatees/secretary-panel/edit.hbs
+++ b/app/components/mandatees/secretary-panel/edit.hbs
@@ -12,7 +12,7 @@
     <Mandatees::MandateeSelector
       @onSelectMandatee={{fn (mut this.secretary)}}
       @selectedMandatees={{this.selectedSecretary}}
-      @visibleRoles={{this.VISIBLE_ROLES}}
+      @visibleRoles={{this.visibleRoles}}
     />
   </Auk::Panel::Body>
   <Auk::Panel::Footer>
