--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -130,7 +130,7 @@
         <Mandatees::MandateeSelector
           @onSelectMandatee={{fn (mut this.secretary)}}
           @selectedMandatees={{this.secretary}}
-          @visibleRoles={{this.VISIBLE_ROLES}}
+          @visibleRoles={{this.visibleRoles}}
         />
       </div>
     </div>
