--- a/app/templates/settings/users/user.hbs
+++ b/app/templates/settings/users/user.hbs
@@ -174,7 +174,7 @@
               @onChange={{fn (mut this.selectedPerson)}}
               @multiple={{false}}
               @selectedPerson={{this.model.person}}
-              @visibleRoles={{this.VISIBLE_ROLES}}
+              @visibleRoles={{this.visibleRoles}}
             />
           </Auk::Panel::Body>
         </Auk::Panel>
