chore: disable save button when secretary is not changed

--- a/app/components/mandatees/secretary-panel/edit.hbs
+++ b/app/components/mandatees/secretary-panel/edit.hbs
@@ -32,6 +32,7 @@
           <AuButton
             @skin="primary"
             @loading={{this.save.isRunning}}
+            @disabled={{not this.secretary}}
             {{on "click" (perform this.save)}}
           >
             {{t "save"}}
