added secretary select modal

--- a/app/components/signatures/select-secretary-modal.hbs
+++ b/app/components/signatures/select-secretary-modal.hbs
@@ -15,9 +15,9 @@
         >
           {{#each this.secretaryOptions as |option|}}
           <Group.Radio
-            @value={{option.value}}
+            @value={{option}}
             >
-            {{option.label}}
+            {{option.fullDisplayName}}
           </Group.Radio>
           {{/each}}
         </AuRadioGroup>
@@ -42,7 +42,7 @@
           <AuButton
             data-test-signatures-select-ministers-apply
             @loading={{@loading}}
-            {{on "click" (fn @onConfirm this.selectedMinisters)}}
+            {{on "click" this.saveSelected}}
           >
             {{t "apply"}}
           </AuButton>
