add functionality to create and manage signflows for decisions

--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -24,7 +24,7 @@
             @skin="secondary"
             @icon="pencil"
             @loading={{this.loadSigners.isPending}}
-            {{on "click" (toggle "showMinisterModal" this)}}
+            {{on "click" this.startEditSigners}}
           >
             {{t "edit-list"}}
           </AuButton>
