KAS-4241 Replace auk-form & auk-form-group instances (part 3)

--- a/app/components/auk/datepicker.hbs
+++ b/app/components/auk/datepicker.hbs
@@ -1,6 +1,7 @@
 <div
   class="auk-datepicker {{@class}} {{if @enableClear "auk-input-with-clear-action"}}"
   {{did-update this.updateEnable this.enable}}
+  ...attributes
 >
   <span class="au-c-input-wrapper au-c-input-wrapper--left auk-u-block auk-u-maximize-width">
     <AuIcon @icon="calendar"/>
