--- a/app/components/utils/formally-ok-selector.hbs
+++ b/app/components/utils/formally-ok-selector.hbs
@@ -1,4 +1,4 @@
-<div class="auk-form-group auk-input-group--w-medium" ...attributes>
+<AuFormRow class="auk-u-width-medium" ...attributes>
   {{#if this.onChange.isRunning}}
     <div class="auk-u-text-muted">
       {{t "please-be-patient"}}
@@ -16,4 +16,4 @@
     {{/if}}
     {{option.label}}
   </PowerSelect>
-</div>
+</AuFormRow>
