--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -1,8 +1,8 @@
 {{page-title (t "publications-tabs-search") }}
 <div class="auk-u-maximize-height auk-scroll-wrapper">
   <Auk::Navbar>
-    <form {{on "submit" this.search}} class="au-u-flex au-u-flex--spaced-small au-u-flex--vertical-end auk-u-maximize-width auk-u-mb-4 auk-u-mt-4">
-      <div class="auk-form-group au-u-margin-bottom-none au-u-2-6">
+    <form {{on "submit" this.search}} class="au-c-form au-u-flex au-u-flex--spaced-small au-u-flex--vertical-end auk-u-maximize-width auk-u-mb-4 auk-u-mt-4">
+      <AuFormRow class="au-u-2-6">
         <div class="auk-o-flex auk-o-flex--align-baseline">
           <Auk::Label for="keyword" class="auk-u-mr">
             {{capitalize (t "search-term")}}
@@ -16,8 +16,8 @@
           id="keyword"
           placeholder={{t "search-placeholder"}}
         />
-      </div>
-      <div class="auk-form-group au-u-margin-bottom-none auk-u-position-relative au-u-1-6">
+      </AuFormRow>
+      <AuFormRow class="au-u-margin-top-none au-u-1-6">
         <Auk::Label for="dateType">
           {{capitalize (t "search-by-date-type")}}
         </Auk::Label>
@@ -36,8 +36,8 @@
             </option>
           {{/each}}
         </select>
-      </div>
-      <div class="auk-form-group au-u-margin-bottom-none auk-u-position-relative au-u-1-6" data-test-route-search-date-from>
+      </AuFormRow>
+      <AuFormRow class="au-u-margin-top-none au-u-1-6" data-test-route-search-date-from>
         <Auk::Label>{{t "from"}}</Auk::Label>
         <Auk::Datepicker
           @date={{this.dateFromBuffer}}
@@ -45,8 +45,8 @@
           @enableClear={{this.dateFromBuffer}}
           @onClear={{set this "dateFromBuffer" undefined}}
         />
-      </div>
-      <div class="auk-form-group au-u-margin-bottom-none auk-u-position-relative au-u-1-6" data-test-route-search-date-to>
+      </AuFormRow>
+      <AuFormRow class="au-u-margin-top-none au-u-1-6" data-test-route-search-date-to>
         <Auk::Label>{{t "until-inclusive"}}</Auk::Label>
         <Auk::Datepicker
           @date={{this.dateToBuffer}}
@@ -54,8 +54,8 @@
           @enableClear={{this.dateToBuffer}}
           @onClear={{set this "dateToBuffer" undefined}}
         />
-      </div>
-      <div class="auk-form-group au-u-margin-bottom-none au-u-1-6">
+      </AuFormRow>
+      <AuFormRow class="au-u-margin-top-none au-u-1-6">
         <AuButton
           data-test-route-search-trigger
           @skin="primary"
@@ -65,7 +65,7 @@
         >
           {{capitalize (t "search")}}
         </AuButton>
-      </div>
+      </AuFormRow>
     </form>
   </Auk::Navbar>
   <div class="auk-scroll-wrapper__body">
