feat: make confirmation modals not closable on loading

--- a/app/components/confirmation-modal.hbs
+++ b/app/components/confirmation-modal.hbs
@@ -1,6 +1,7 @@
 <AuModal
   @modalOpen={{@modalOpen}}
   @closeModal={{this.cancel}}
+  @closable={{not @loading}}
 >
   <:title>
     {{#if (has-block "title")}}
