chore: make modals not closable on loading

--- a/app/templates/settings/organizations/organization.hbs
+++ b/app/templates/settings/organizations/organization.hbs
@@ -112,7 +112,7 @@
                     <td
                       data-test-route-settings---organization-technical-info-row-mandatee
                     >
-                      <Mandatee::NameWithRange @mandatee={{mandatee}}/>
+                      <Mandatee::NameWithRange @mandatee={{mandatee}} />
                     </td>
                     <td class="au-u-text-right">
                       <AuButton
@@ -149,6 +149,7 @@
 <AuModal
   @modalOpen={{this.showBlockOrganization}}
   @closeModal={{toggle "showBlockOrganization" this}}
+  @closable={{this.blockOrganization.isIdle}}
 >
   <:title>
     {{t "block-organization"}}
@@ -179,7 +180,10 @@
           @alert={{true}}
           {{on
             "click"
-            (queue this.blockOrganization (toggle "showBlockOrganization" this))
+            (queue
+              (perform this.blockOrganization)
+              (toggle "showBlockOrganization" this)
+            )
           }}
         >
           {{t "block-organization"}}
@@ -191,6 +195,7 @@
 <AuModal
   @modalOpen={{this.showUnblockOrganization}}
   @closeModal={{toggle "showUnblockOrganization" this}}
+  @closable={{this.unblockOrganization.isIdle}}
 >
   <:title>
     {{t "unblock-organization"}}
@@ -222,7 +227,8 @@
           {{on
             "click"
             (queue
-              this.unblockOrganization (toggle "showUnblockOrganization" this)
+              (perform this.unblockOrganization)
+              (toggle "showUnblockOrganization" this)
             )
           }}
         >
@@ -235,6 +241,7 @@
 <AuModal
   @modalOpen={{this.showUnlinkMandatee}}
   @closeModal={{toggle "showUnlinkMandatee" this}}
+  @closable={{this.unlinkMandatee.isIdle}}
 >
   <:title>
     {{t "unlink-mandatee"}}
