--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -6,6 +6,7 @@
   @confirmMessage={{t "save"}}
   @loading={{this.saveEdit.isRunning}}
   @disabled={{this.isDisabled}}
+  @closable={{not this.isDisabled}}
 >
   <:body>
     <AuCard
