chore: add digital signing help menu items

--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -85,6 +85,20 @@
           >
             {{t "look-at-documentation"}}
           </AuLinkExternal>
+          <AuLinkExternal
+            href="/leidraad-digitaal-ondertekenen"
+            role="menuitem"
+            target="_blank"
+          >
+            {{t "guideline-digital-signing"}}
+          </AuLinkExternal>
+          <AuLinkExternal
+            href="https://youtu.be/b9MOIt1BNy0"
+            role="menuitem"
+            target="_blank"
+          >
+            {{t "screencast-digital-signing"}}
+          </AuLinkExternal>
           <AuHr />
           <AuLink
             href="mailto:kaleidos.servicedesk@vlaanderen.be"
