chore: simplify helper usage

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -15,7 +15,7 @@
             this.loadReport.isIdle
             (user-may "manage-decisions")
             (not this.isEditing)
-            (or (not this.pieceParts this.report))
+            (not this.pieceParts this.report)
             this.enableDigitalAgenda
           )
         }}
