--- a/app/components/publications/new-publication-modal.hbs
+++ b/app/components/publications/new-publication-modal.hbs
@@ -97,7 +97,7 @@
           />
         </AuFormRow>
         <div class="auk-o-grid-auto">
-          <AuFormRow>
+          <AuFormRow class="auk-u-position-relative">
             <Auk::Label>
               {{t "decision-date"}}
             </Auk::Label>
@@ -112,7 +112,7 @@
               />
             {{/if}}
           </AuFormRow>
-          <AuFormRow>
+          <AuFormRow class="auk-u-position-relative">
             <Auk::Label>
               {{t "publication-flow-opening-date"}}
             </Auk::Label>
@@ -121,7 +121,7 @@
               @onChange={{set this "openingDate"}}
             />
           </AuFormRow>
-          <AuFormRow>
+          <AuFormRow class="auk-u-position-relative">
             <Auk::Label>
               {{t "publication-flow-publication-due-date"}}
             </Auk::Label>
