--- a/app/components/publications/publication/decisions/info/decisions-info-panel.hbs
+++ b/app/components/publications/publication/decisions/info/decisions-info-panel.hbs
@@ -54,7 +54,7 @@
 
               {{! Datum beslissing }}
               <div class="auk-o-grid-col-3">
-                <AuFormRow>
+                <AuFormRow class="auk-u-position-relative">
                   <Auk::Label>{{t "decision-date"}}</Auk::Label>
                   {{#if (and this.isViaCouncilOfMinisters this.modelsForAgendaitemRoute)}}
                     <AuLink
