--- a/app/components/publications/publication/publication-activities/publication-edit-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-edit-modal.hbs
@@ -10,7 +10,7 @@
       @reserveSpace={{true}}
     >
       <div class="au-c-form">
-        <AuFormRow>
+        <AuFormRow class="auk-u-position-relative">
           <Auk::Label for="publicationRegisterModal_publicationDate">
             {{t "publication-date"}}
           </Auk::Label>
