--- a/app/components/publications/publication/translations/translation-upload-modal.hbs
+++ b/app/components/publications/publication/translations/translation-upload-modal.hbs
@@ -24,7 +24,7 @@
           {{t "update-publication-status-translation-received"}}
         </AuCheckbox>
       </AuFormRow>
-      <AuFormRow data-test-translation-upload-received-date>
+      <AuFormRow class="auk-u-position-relative" data-test-translation-upload-received-date>
         <Auk::Label for="translationUploadReceivedAtDate">
           {{t "date-received"}}
         </Auk::Label>
