--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -13,7 +13,7 @@
           <div class="auk-o-grid">
             {{!Beslissingsdatum}}
             <div class="auk-o-grid-col-6">
-              <AuFormRow>
+              <AuFormRow class="auk-u-position-relative">
                 <Auk::Label
                   for="publicationReportsDecisionStartDate"
                   @required={{true}}
@@ -33,7 +33,7 @@
               </AuFormRow>
             </div>
             <div class="auk-o-grid-col-6">
-              <AuFormRow>
+              <AuFormRow class="auk-u-position-relative">
                 <Auk::Label
                   for="publicationReportsDecisionEndDate"
                   @error={{not this.isDecisionDateRangeEndValid}}
