--- a/app/components/publications/publication/proofs/proof-upload-modal.hbs
+++ b/app/components/publications/publication/proofs/proof-upload-modal.hbs
@@ -24,7 +24,7 @@
           {{t "update-publication-status-proof-received"}}
         </AuCheckbox>
       </AuFormRow>
-      <AuFormRow>
+      <AuFormRow class="auk-u-position-relative">
         <Auk::Label for="proofUploadReceivedDate" @required={{true}}>
           {{t "date"}}
         </Auk::Label>
