--- a/app/components/search/date-range-filter.hbs
+++ b/app/components/search/date-range-filter.hbs
@@ -1,6 +1,6 @@
 <div class="au-c-card au-o-box au-o-box--small">
   <div class="au-c-form">
-    <AuFormRow data-test-route-search-date-from>
+    <AuFormRow class="auk-u-position-relative" data-test-route-search-date-from>
       <Auk::Label>{{t "from"}}</Auk::Label>
       <Auk::Datepicker
         @date={{@dateFrom}}
@@ -9,7 +9,7 @@
         @onClear={{@onDateFromClear}}
       />
     </AuFormRow>
-    <AuFormRow class="au-u-margin-top-small" data-test-route-search-date-to>
+    <AuFormRow class="auk-u-position-relative au-u-margin-top-small" data-test-route-search-date-to>
       <Auk::Label>{{t "until-inclusive"}}</Auk::Label>
       <Auk::Datepicker
         @date={{@dateTo}}
