--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -17,7 +17,7 @@
           placeholder={{t "search-placeholder"}}
         />
       </AuFormRow>
-      <AuFormRow class="au-u-margin-top-none au-u-1-6" data-test-route-search-date-from>
+      <AuFormRow class="auk-u-position-relative au-u-margin-top-none au-u-1-6" data-test-route-search-date-from>
         <Auk::Label>{{t "from"}}</Auk::Label>
         <Auk::Datepicker
           @date={{this.dateFromBuffer}}
@@ -26,7 +26,7 @@
           @onClear={{set this "dateFromBuffer" undefined}}
         />
       </AuFormRow>
-      <AuFormRow class="au-u-margin-top-none au-u-1-6" data-test-route-search-date-to>
+      <AuFormRow class="auk-u-position-relative au-u-margin-top-none au-u-1-6" data-test-route-search-date-to>
         <Auk::Label>{{t "until-inclusive"}}</Auk::Label>
         <Auk::Datepicker
           @date={{this.dateToBuffer}}
